adjusted the rest of the components as the fixed heights within other containers was contributing this this white gap

--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@
     box-sizing: border-box;
 }
 
+body {
+  background: rgb(251, 180, 224);
+  min-height: 100dvh;
+}
+
 /*main grid */
 .main-container {
     display: grid;
@@ -183,8 +188,10 @@
 .body-container2 {
     display: grid;
     grid-template-columns: 2fr 2fr 1fr;
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-rows: repeat(3, auto);
     background-color: rgb(251, 180, 224);
+    gap: 20px;
+    background: transparent;  
 }
 
 .zeus {
@@ -219,14 +226,12 @@
 
 .hercules, .hades, .zeus, .pandora, .persephone, .posiden {
     padding: 25px;
-    margin: 20px;
     width: 320px;
-    height: 170px;
     background-color: rgb(225, 151, 195);
     border-radius: 8px;
     border-left: 20px solid rgb(208, 94, 162);
     align-self: start;
-    justify-self: center; 
+    justify-self: center;
 }
 
 .story-title {
@@ -268,14 +273,8 @@
     grid-row: 1 / span 2;
     background-color: rgb(180, 126, 169);
     width: 320px;
-    height: 260px;
-    margin-bottom: 15px;
-    margin-left: 15px;
-    margin-right: 15px;
-    padding-left: 25px;
-    padding-right: 25px;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    margin: 15px;
+    padding: 20px 25px;
     border-radius: 10px;
 }
 
@@ -343,7 +342,6 @@
     grid-template-columns: 1fr 2fr;
     grid-auto-rows: auto; 
     width: 320px;
-    height: 320px;
     gap: 0; 
     margin-bottom: 20px; 
     margin-left: 14.5px;
